# subrim

./: -  .gitignore  CMakeLists.txt  CMakeLists_cross.txt  README_GLOBOPLAY_SCRAPER.md  README_MARITACA_AI.md  README_R36S_INSTALLATION.md  README_WINDOWS.md  add_seconds_to_srt.py  adjust_base_times.py  arm-linux-gnueabihf.cmake  arm_hello.sh  audio_burner.py  audio_translator.py  audio_translator_pt.py  base.c  base.h  build_and_install_r36s.bat  build_and_install_r36s_wsl.sh  build_for_r36s.bat  build_for_r36s.sh  build_for_r36s_native.bat  build_for_r36s_wsl.sh  build_gba_with_docker.sh  build_minimal_r36s.sh  build_simple_arm.sh  build_simple_cross.sh  build_with_static_sdl2.sh  clean_build.sh  config_windows.bat  convert_to_gameboy.sh  convert_to_gba.sh  copy_to_sd_card_wsl.sh  create_gba_standalone.sh  create_gba_welcome.sh  create_portmaster_package_wsl.sh  create_portuguese_srt.py  create_r36s_port.sh  debug_chunk.py  debug_ffmpeg_command.py  (+67 more)
r36s_viewer_gba/: Makefile  create_minimal_gba.py  create_standalone_gba.py  create_welcome_gba.py  create_working_gba.py  gba.h  gba.ld  viewer.c  viewer.gba
warehouse/: word_fetcher.py
